[tool.poetry]
name = "valetsshing"
version = "0.1.0"
description = "The valet will manage the keys and configuration for you."
authors = ["sumeshi <j15322sn@gmail.com>"]
license = "MIT"
readme = "README.md"

repository = "https://github.com/sumeshi/valet-sshing"
homepage = "https://github.com/sumeshi/valet-sshing"

[tool.poetry.scripts]
vs = "valetsshing.valetsshing:run"

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.790"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
